[gd_scene load_steps=8 format=3 uid="uid://ctruwb84p47pj"]

[ext_resource type="FontFile" uid="uid://c6plh0y06it7h" path="res://Assets/Font/SF-Pro-Rounded-Semibold.otf" id="1_vnxdk"]
[ext_resource type="Script" path="res://UI/Pause/GD_PauseMenu.gd" id="1_vud8f"]

[sub_resource type="Theme" id="Theme_wag3i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_npfoq"]
bg_color = Color(0.788235, 0.788235, 0.788235, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0kbk3"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Theme" id="Theme_vgcse"]
Button/styles/normal = SubResource("StyleBoxFlat_0kbk3")

[sub_resource type="LabelSettings" id="LabelSettings_pslm7"]
font = ExtResource("1_vnxdk")
font_size = 32
font_color = Color(0, 0, 0, 1)

[node name="SPauseMenu" type="CanvasLayer"]
script = ExtResource("1_vud8f")

[node name="PanelContainer2" type="Panel" parent="."]
custom_minimum_size = Vector2(100, 100)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -112.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_wag3i")
theme_override_styles/panel = SubResource("StyleBoxFlat_npfoq")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer2/PanelContainer"]
custom_minimum_size = Vector2(460, 240)
layout_mode = 2

[node name="Control5" type="Control" parent="PanelContainer2/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="Control2" type="Control" parent="PanelContainer2/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 62)
layout_mode = 2

[node name="UnPauseButton" type="Button" parent="PanelContainer2/PanelContainer/VBoxContainer/Control2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.0
offset_top = -31.0
offset_right = 218.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_vgcse")

[node name="Label" type="Label" parent="PanelContainer2/PanelContainer/VBoxContainer/Control2/UnPauseButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.0
offset_top = -19.5
offset_right = 122.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
text = "Back to the game
"
label_settings = SubResource("LabelSettings_pslm7")

[node name="Control" type="Control" parent="PanelContainer2/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="Control3" type="Control" parent="PanelContainer2/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 62)
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="PanelContainer2/PanelContainer/VBoxContainer/Control3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.0
offset_top = -31.0
offset_right = 218.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_vgcse")

[node name="Label" type="Label" parent="PanelContainer2/PanelContainer/VBoxContainer/Control3/MainMenuButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.5
offset_top = -19.5
offset_right = 124.5
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
text = "Exit to main menu"
label_settings = SubResource("LabelSettings_pslm7")

[node name="Control4" type="Control" parent="PanelContainer2/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="DesktopButton" type="Button" parent="PanelContainer2/PanelContainer/VBoxContainer/Control4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.0
offset_top = -31.0
offset_right = 218.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_vgcse")

[node name="Label" type="Label" parent="PanelContainer2/PanelContainer/VBoxContainer/Control4/DesktopButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -19.5
offset_right = 104.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
text = "Exit to desktop
"
label_settings = SubResource("LabelSettings_pslm7")

[node name="Control6" type="Control" parent="PanelContainer2/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[connection signal="pressed" from="PanelContainer2/PanelContainer/VBoxContainer/Control2/UnPauseButton" to="." method="_on_un_pause_button_pressed"]
[connection signal="pressed" from="PanelContainer2/PanelContainer/VBoxContainer/Control3/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="PanelContainer2/PanelContainer/VBoxContainer/Control4/DesktopButton" to="." method="_on_desktop_button_pressed"]
